--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,5 +35,6 @@ android {
 
     dependencies {
         implementation 'com.facebook.android:facebook-share:5.15.3'
+        implementation 'com.facebook.android:facebook-messenger:5.15.3'
     }
 }
